Fix sprite-viewer caught indicator alignment issue

--- a/src/modules/components/sprite-viewer/styles.css
+++ b/src/modules/components/sprite-viewer/styles.css
@@ -139,6 +139,7 @@ sprite-viewer a.icon-button.bouton-retour {
 .not-caught-indicator {
   display: grid;
   place-items: center;
+  flex-shrink: 0;
 }
 
 .not-caught-indicator svg {
